--- a/ui_lovelace_minimalist/dashboard/views/01-home.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/01-home.yaml
@@ -270,15 +270,11 @@ cards:
             - sensor.dead_z_wave_nodes
             - sensor.printer_left_on
           entity_2:
-            entity_id: switch.office_switch_switch_1
-            templates:
-              - yellow_on
-          entity_3:
-            entity_id: binary_sensor.poat_rgb_connectivity
+            entity_id: switch.office_fan
             templates:
               - blue_on
-          entity_4:
-            entity_id: switch.office_fan
+          entity_3:
+            entity_id: binary_sensor.poat_rgb_connectivity
             templates:
               - blue_on
 
@@ -333,7 +329,7 @@ cards:
             templates:
               - yellow_on
           entity_3:
-            entity_id: switch.master_bath_light_2
+            entity_id: switch.master_bath_fan
             templates:
               - blue_on
 
