--- a/ui_lovelace_minimalist/dashboard/views/subviews/z-wave.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/subviews/z-wave.yaml
@@ -9,8 +9,9 @@ layout:
     # portrait monitor
     "only screen and (min-width: 769px) and (max-width: 1400px)":
       grid-template-areas: |
-        "nav . logo status"
-        "seen nodes health health"
+        "nav logo status"
+        "health . ."
+        "seen nodes ."
     # Smartphones
     "only screen and (max-width: 768px)":
       grid-template-areas: |
