--- a/ui_lovelace_minimalist/dashboard/home-dashboard.yaml
+++ b/ui_lovelace_minimalist/dashboard/home-dashboard.yaml
@@ -2,6 +2,7 @@
 button_card_templates: !include_dir_merge_named "../../custom_components/ui_lovelace_minimalist/__ui_minimalist__/ulm_templates/"
 
 title: "The Matrix"
+theme: "minimalist-desktop"
 background: "var(--background-image)"
 views: !include_dir_list views
 
